# cartoriosinfo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/cartoriosinfo/: __init__.py  cartoriosinfo.py  selenium-cartorios.py
src/cartoriosinfo/data/tidy/: cartorios.csv
tests/: test_cartoriosinfo.py
