[tool.poetry]
name = "cartoriosinfo"
version = "0.1.0"
description = "Scraper do site cartorios.info"
authors = ["Julio Trecenti"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
